# dbt-quicksight-lineage

./: .pylintrc  .tagpr  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: reviewdog.yaml  tagpr.yaml  test.yaml
src/dbt2quicksight/: __init__.py
src/dbt_quicksight_lineage/: __about__.py  __init__.py  __main__.py
src/dbt_quicksight_lineage/cli/: __init__.py  main.py  requires.py
src/dbt_quicksight_lineage/core/: __init__.py  app.py  dbt.py  quicksight.py
tests/: __init__.py
tests/core/: test_app.py  test_dbt.py  test_quicksight.py
tests/data/: describe_data_set_output.json  expected_schema.yml  manifest.json  modified_data_set.json  partial_parse.msgpack
tests/data/fixture/: data_set.json  test_add_to_field_folder_move.golden.json  test_add_to_field_folder_not_exits.golden.json  test_add_to_field_folder_same_folder.golden.json  test_add_to_field_folder_same_folder_same_field.golden.json  test_add_to_projected_columns_exists.golden.json  test_add_to_projected_columns_not_exists.golden.json  test_set_cast_column_type_operation_exists_replace.golden.json  test_set_cast_column_type_operation_not_exists.golden.json  test_set_cast_column_type_operation_same_type.golden.json  test_set_rename_column_oeration_not_exists.golden.json  test_set_rename_operation_exits_replace.golden.json  test_set_tag_column_geographic_role_operation_exists_replace.golden.json  test_set_tag_column_geographic_role_operation_not_exists.golden.json  test_set_tag_column_operation_description_empty.golden.json  test_set_tag_column_operation_description_exists_replace.golden.json  test_set_tag_column_operation_description_not_exists.golden.json
tests/data/test_project/: .gitignore  .user.yml  Makefile  dbt_project.yml  docker-compose.yaml  profiles.yml
tests/data/test_project/models/example/: schema.yml
