[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-quicksight-lineage"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "mashiike", email = "ikeda-masashi@kayac.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click~=8.1.3",
    "dbt-core~=1.5.2",
    "boto3~=1.26.164",
    "colorlog~=6.7.0",
    "ruamel.yaml~=0.17.32",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
managed = true
dev-dependencies = [
    "hatch~=1.7.0",
    "mkdocs~=1.4.3",
    "dbt-postgres~=1.5.2",
    "pytest~=7.4.0",
    "moto~=4.1.12",
    "dbt-redshift~=1.5.6",
    "mock~=5.0.2",
    "pylint~=2.17.4",
]

[project.urls]
Documentation = "https://github.com/mashiike/dbt-quicksight-lineage#readme"
Issues = "https://github.com/mashiike/dbt-quicksight-lineage/issues"
Source = "https://github.com/mashiike/dbt-quicksight-lineage"

[project.scripts]
dbt-quicksight-lineage = "dbt_quicksight_lineage.cli:dbt_quicksight_lineage"

[tool.hatch.version]
path = "src/dbt_quicksight_lineage/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/dbt_quicksight_lineage tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["dbt_quicksight_lineage"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["dbt_quicksight_lineage", "tests"]
branch = true
parallel = true
omit = [
  "src/dbt_quicksight_lineage/__about__.py",
]

[tool.coverage.paths]
dbt_quicksight_lineage = ["src/dbt_quicksight_lineage", "*/dbt-quicksight-lineage/src/dbt_quicksight_lineage"]
tests = ["tests", "*/dbt-quicksight-lineage/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.rye.scripts]
test = "pytest"
lint = "pylint --rcfile=.pylintrc src/dbt_quicksight_lineage tests"
